<?xml version="1.0" encoding="utf-8"?>
<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>
<variable
    name="sleepQualityViewModel"
    type="ua.turskyi.sleeptracker.sleepquality.SleepQualityViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepquality.SleepQualityFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/triple_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/how_was_hour_sleep"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/qualityZeroImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/qualityZeroImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(0)}"
            android:contentDescription="@string/quality_0"
            app:layout_constraintEnd_toStartOf="@+id/qualityOneImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:srcCompat="@drawable/ic_sleep_0" />

        <ImageView
            android:id="@+id/qualityOneImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(1)}"
            app:layout_constraintBottom_toBottomOf="@+id/qualityZeroImage"
            app:layout_constraintEnd_toStartOf="@+id/qualityTwoImage"
            app:layout_constraintStart_toEndOf="@+id/qualityZeroImage"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/qualityTwoImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(2)}"
            android:contentDescription="@string/quality_2"
            app:layout_constraintBottom_toBottomOf="@+id/qualityOneImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qualityOneImage"
            app:srcCompat="@drawable/ic_sleep_2" />

        <ImageView
            android:id="@+id/qualityThreeImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(3)}"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/quality_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/qualityFourImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qualityZeroImage"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_sleep_3" />

        <ImageView
            android:id="@+id/qualityFourImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(4)}"
            android:contentDescription="@string/quality_4"
            app:layout_constraintBottom_toBottomOf="@+id/qualityThreeImage"
            app:layout_constraintEnd_toStartOf="@+id/qualityFiveImage"
            app:layout_constraintStart_toEndOf="@+id/qualityThreeImage"
            app:layout_constraintTop_toTopOf="@+id/qualityThreeImage"
            app:srcCompat="@drawable/ic_sleep_4" />

        <ImageView
            android:id="@+id/qualityFiveImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(5)}"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_5"
            app:layout_constraintBottom_toBottomOf="@+id/qualityFourImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qualityFourImage"
            app:layout_constraintTop_toTopOf="@+id/qualityFourImage"
            app:srcCompat="@drawable/ic_sleep_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
