<?xml version="1.0" encoding="utf-8"?>

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->
    <data>
<variable
    name="sleepTrackerViewModel"
    type="ua.turskyi.sleeptracker.sleeptracker.SleepTrackerViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleeptracker.SleepTrackerFragment">

        <!-- Simplest way of displaying scrollable text and data.  -->

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/clearButton"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/stopButton">-->

<!--            &lt;!&ndash; In the TextView, we can access the nightsString LiveData,-->
<!--                 which keeps it displayed and updated in the TextView-->
<!--                 whenever it changes. &ndash;&gt;-->

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/margin"-->
<!--                android:layout_marginTop="@dimen/margin"-->
<!--                android:layout_marginEnd="@dimen/margin"-->
<!--                android:text="@{sleepTrackerViewModel.nightsString}" />-->
<!--        </ScrollView>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleepList"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/clearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stopButton"
            android:layout_height="0dp"/>

        <!-- With data binding and LiveData, we can track the buttons' visibility states
             from the ViewModel. The click handler is in the ViewModel as well, and
             you can set it for the Views using this lambda pattern. -->

        <Button
            android:id="@+id/startButton"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/start"
            android:enabled="@{sleepTrackerViewModel.startButtonVisible}"
            android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
            app:layout_constraintBaseline_toBaselineOf="@id/stopButton"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopButton"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:enabled="@{sleepTrackerViewModel.stopButtonVisible}"
            android:text="@string/stop"
            android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButton"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
            android:text="@string/clear"
            android:enabled="@{sleepTrackerViewModel.clearButtonVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
